--- a/PremierLeague/Base.lproj/Main.storyboard
+++ b/PremierLeague/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3To-7A-dKP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MDW-Ot-H0Z">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -129,7 +129,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Try-BZ-Xl9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1930.4000000000001" y="169.56521739130437"/>
+            <point key="canvasLocation" x="1948" y="139"/>
         </scene>
         <!--Table-->
         <scene sceneID="gkY-zu-RV5">
@@ -379,6 +379,119 @@
             </objects>
             <point key="canvasLocation" x="3765.5999999999999" y="138.98050974512745"/>
         </scene>
+        <!--Teams-->
+        <scene sceneID="M5q-77-h8Y">
+            <objects>
+                <viewController id="vRp-Ez-eXy" customClass="TeamViewController" customModule="PremierLeague" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2Xz-l6-EhS"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ex0-kv-Slv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="G6R-iq-tZ7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MJH-oK-Ouq">
+                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of teams" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XZW-o9-AG5">
+                                        <rect key="frame" x="20" y="6.5" width="159.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFF-01-tgj">
+                                        <rect key="frame" x="348.5" y="6.5" width="6.5" height="28"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="vFF-01-tgj" secondAttribute="trailing" constant="20" id="3y9-V2-oWg"/>
+                                    <constraint firstItem="vFF-01-tgj" firstAttribute="centerY" secondItem="MJH-oK-Ouq" secondAttribute="centerY" id="CKM-0f-fUI"/>
+                                    <constraint firstItem="XZW-o9-AG5" firstAttribute="centerY" secondItem="MJH-oK-Ouq" secondAttribute="centerY" id="Gxs-NY-mFX"/>
+                                    <constraint firstItem="XZW-o9-AG5" firstAttribute="leading" secondItem="MJH-oK-Ouq" secondAttribute="leading" constant="20" id="ivz-61-03M"/>
+                                    <constraint firstAttribute="height" constant="40" id="yXN-pq-d5y"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Bj-Fp-p6d">
+                                <rect key="frame" x="0.0" y="104" width="375" height="514"/>
+                                <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="aT1-Ml-gF5" customClass="Team_TableViewCell" customModule="PremierLeague" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aT1-Ml-gF5" id="bOe-Xf-b7r">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0bV-ed-Jtn">
+                                                    <rect key="frame" x="300" y="10" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="LRh-It-mm0"/>
+                                                        <constraint firstAttribute="width" constant="60" id="bSH-ni-SxA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pyc-Zp-afr">
+                                                    <rect key="frame" x="10" y="29" width="25" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="8hp-9U-04B"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tIo-DB-9s5">
+                                                    <rect key="frame" x="50" y="29" width="89" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0bV-ed-Jtn" firstAttribute="centerY" secondItem="bOe-Xf-b7r" secondAttribute="centerY" id="B1h-ug-gdH"/>
+                                                <constraint firstItem="tIo-DB-9s5" firstAttribute="centerY" secondItem="pyc-Zp-afr" secondAttribute="centerY" id="Clb-h7-wk1"/>
+                                                <constraint firstItem="pyc-Zp-afr" firstAttribute="centerY" secondItem="bOe-Xf-b7r" secondAttribute="centerY" id="GOL-Yj-f01"/>
+                                                <constraint firstAttribute="trailing" secondItem="0bV-ed-Jtn" secondAttribute="trailing" constant="15" id="e2f-MQ-mXe"/>
+                                                <constraint firstItem="tIo-DB-9s5" firstAttribute="leading" secondItem="pyc-Zp-afr" secondAttribute="trailing" constant="15" id="x1k-yY-ufE"/>
+                                                <constraint firstItem="pyc-Zp-afr" firstAttribute="leading" secondItem="bOe-Xf-b7r" secondAttribute="leading" constant="10" id="x61-eQ-mjj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="imageTeam" destination="0bV-ed-Jtn" id="84D-BB-LZq"/>
+                                            <outlet property="lblTeamName" destination="tIo-DB-9s5" id="U1D-Tb-FaI"/>
+                                            <outlet property="lblstt" destination="pyc-Zp-afr" id="sxo-PE-Wv8"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MJH-oK-Ouq" firstAttribute="top" secondItem="2Xz-l6-EhS" secondAttribute="bottom" id="6PB-Ye-Kap"/>
+                            <constraint firstAttribute="trailing" secondItem="MJH-oK-Ouq" secondAttribute="trailing" id="8EC-6f-cBX"/>
+                            <constraint firstItem="6Bj-Fp-p6d" firstAttribute="top" secondItem="MJH-oK-Ouq" secondAttribute="bottom" id="BHy-SY-zgX"/>
+                            <constraint firstItem="Ex0-kv-Slv" firstAttribute="top" secondItem="6Bj-Fp-p6d" secondAttribute="bottom" id="NOc-dM-q9z"/>
+                            <constraint firstItem="6Bj-Fp-p6d" firstAttribute="leading" secondItem="G6R-iq-tZ7" secondAttribute="leading" id="fyF-DM-ntV"/>
+                            <constraint firstItem="MJH-oK-Ouq" firstAttribute="leading" secondItem="G6R-iq-tZ7" secondAttribute="leading" id="rVR-Ej-Yzu"/>
+                            <constraint firstAttribute="trailing" secondItem="6Bj-Fp-p6d" secondAttribute="trailing" id="rnn-yT-odH"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Teams" id="dev-Yb-oXB"/>
+                    <connections>
+                        <outlet property="lblnumberofTeam" destination="vFF-01-tgj" id="PCX-n8-FjO"/>
+                        <outlet property="teamTableView" destination="6Bj-Fp-p6d" id="0vN-Zg-XrM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LU3-Js-zIj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5605.6000000000004" y="138.98050974512745"/>
+        </scene>
         <!--Fixtures-->
         <scene sceneID="9yv-1L-0uK">
             <objects>
@@ -396,7 +509,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5TD-lT-sEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="991.20000000000005" y="169.56521739130437"/>
+            <point key="canvasLocation" x="985" y="139"/>
         </scene>
         <!--Table-->
         <scene sceneID="LYb-qX-ZkJ">
@@ -415,7 +528,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3T3-Px-dNA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2796" y="169.56521739130437"/>
+            <point key="canvasLocation" x="2820" y="139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Xy6-sh-VgR">
@@ -430,15 +543,68 @@
                     <connections>
                         <segue destination="GEQ-Nc-2QH" kind="relationship" relationship="viewControllers" id="wQn-nU-x23"/>
                         <segue destination="khA-D3-PHH" kind="relationship" relationship="viewControllers" id="8wH-c2-zvq"/>
+                        <segue destination="8zf-eS-NVx" kind="relationship" relationship="viewControllers" id="ub3-q0-LRF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mO7-tK-k31" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2170" y="-672"/>
+            <point key="canvasLocation" x="2820" y="-844"/>
+        </scene>
+        <!--Teams-->
+        <scene sceneID="zgV-Sm-A1S">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8zf-eS-NVx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Teams" image="team" id="Jac-gi-QqU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5zV-Ao-ovs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vRp-Ez-eXy" kind="relationship" relationship="rootViewController" id="lEx-Br-5bl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="prI-1d-U6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4682" y="139"/>
+        </scene>
+        <!--Brefing View Controller-->
+        <scene sceneID="yUl-zk-C2G">
+            <objects>
+                <viewController id="MDW-Ot-H0Z" customClass="BrefingViewController" customModule="PremierLeague" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="htJ-Aw-aGv"/>
+                        <viewControllerLayoutGuide type="bottom" id="lCk-To-MjQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="67W-b1-pda">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DU0-2G-OmC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="DU0-2G-OmC" firstAttribute="top" secondItem="67W-b1-pda" secondAttribute="top" id="Lqf-od-E9o"/>
+                            <constraint firstItem="DU0-2G-OmC" firstAttribute="leading" secondItem="67W-b1-pda" secondAttribute="leading" id="YmR-hT-e0p"/>
+                            <constraint firstItem="lCk-To-MjQ" firstAttribute="top" secondItem="DU0-2G-OmC" secondAttribute="bottom" id="hFR-9y-gfg"/>
+                            <constraint firstAttribute="trailing" secondItem="DU0-2G-OmC" secondAttribute="trailing" id="wuo-TB-i6X"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="myScrollView" destination="DU0-2G-OmC" id="TCF-GR-ucl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ytC-lb-W76" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1158" y="-936"/>
         </scene>
     </scenes>
     <resources>
         <image name="fixtures" width="32" height="32"/>
         <image name="order list" width="32" height="24"/>
+        <image name="team" width="32" height="32"/>
     </resources>
 </document>
